# axum-demo

./: .env  .gitignore  Cargo.toml  README.md  Readme.md  app.yaml
auth/: auth_model.conf
http_test/: test.http
src/: error.rs  lib.rs  main.rs
src/api/: jwt.rs  mod.rs  routes.rs
src/api/user/: dto.rs  handler.rs  mod.rs  module.rs  server.rs
src/app/: mod.rs  state.rs
src/app/controllers/: hello_middleware.rs  mod.rs  shortlink_controller.rs  user_author.rs  user_controller.rs
src/app/models/: mod.rs  shortlink.rs
src/app/models/dto/: mod.rs  shortlinkdto.rs  userdto.rs
src/app/utils/: mod.rs
src/config/: database.rs  db.rs  log.rs  mod.rs  routes.rs
src/middlewares/: login_middleware.rs  mod.rs
src/routes/: api_doc.rs  mod.rs  root.rs
src/routes/auth/: jwt.rs  mod.rs  router.rs  service.rs
src/routes/auth/dao/: casbin.rs  menu.rs  mod.rs  role.rs  role_menu.rs  user_role.rs
src/routes/user/: dao.rs  dto.rs  mod.rs  router.rs
src/utils/: db.rs  encrypt_util.rs  excel_util.rs  mod.rs  router_util.rs  string_util.rs
tests/: auth.sql  dev_test.http  dev_test.rs  mysql.sql  user.dio
