[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5" ,features = ["headers"]}
tokio = { version = "1.19", features = ["full"] }
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_any = { version = "0.5", default-features = false, features = ["yaml"] } # "toml"

tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3", features = ["add-extension", "trace","cors"] }
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time","env-filter"] }
tracing-appender = { version = "0.2"}

time = {version = "0.3",features = ["macros","local-offset"]}
redis = {version = "0.21", features = ["aio","connection-manager", "tokio-comp"] }

jsonwebtoken = "8"
once_cell = "1.12"
headers = "0.3"
lazy_static = "1.4"

sqlx-adapter = {version = "0.4", default-features = false, features = ["mysql","runtime-tokio-native-tls"]}
