[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6" ,features = ["headers"]}
# axum-extra = {version = "0.8",features=["cookie"]}
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls","chrono"] }
redis = {version = "0.23", features = ["tokio","connection-manager","tokio-comp"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4", features = ["fs","cors","trace"] }
tower-cookies = "0.9"

# uuid = { version = "1", features = ["serde", "v4"] }


#log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time","env-filter"] }
tracing-appender = { version = "0.2"}

time = {version = "0.3",features = ["macros"]}
chrono = "0.4"

#jwt
jsonwebtoken = "9"
once_cell = "1"
# headers = "0.3"

dotenv = "0.15"

[dev-dependencies]
anyhow = "1"
httpc-test = "0"