[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7" }
# axum-extra = {version = "0.8",features=["cookie"]}
tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.7", features = ["mysql", "runtime-tokio","chrono","rust_decimal"] }
redis = {version = "0.25", features = ["tokio","connection-manager","tokio-comp"]}
co-orm ={version = "0.3", features = ["mysql"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["fs","cors","trace"] }
tower-cookies = "0.10"
tower-sessions = "0.12"
# uuid = { version = "1.5", features = ["serde", "v4"] }
# ulid = "1"

#log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time","env-filter"] }
tracing-appender = { version = "0.2"}

time = {version = "0.3",features = ["macros"]}
chrono = "0.4"

#jwt
jsonwebtoken = "9"
# once_cell = "1"
# headers = "0.3"
dotenv = "0.15"
validator = { version = "0.18", features = ["derive"] }
regex = "*"

bcrypt = "0.15"

# apidoc
utoipa ={version = "4.2", features = ["axum_extras"]}
utoipa-rapidoc = { version = "4.0", features = ["axum"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"
reqwest = "0.11"